# ros2-video-test

./: .gitignore  .gitmodules  README.md  build.sh  install_python_rec.sh  launch_analog_gauge_reader.sh  requirements.txt  rocm.env  run_consumer.sh  run_producer.sh  show_available_channels.py
containers/: Dockerfile_gauge_det  build.sh
src/analog_gauge_reader/analog_gauge_reader/: package.xml  requirements.txt  setup.cfg  setup.py
src/analog_gauge_reader/analog_gauge_reader/analog_gauge_reader/: analog_gauge_reader.py  pipeline.py  plots.py
src/analog_gauge_reader/analog_gauge_reader/analog_gauge_reader/gauge_detection/: detection_inference.py
src/analog_gauge_reader/analog_gauge_reader/analog_gauge_reader/ocr/: ocr_inference.py
src/analog_gauge_reader/analog_gauge_reader/analog_gauge_reader/segmentation/: segmenation_inference.py
src/analog_gauge_reader/analog_gauge_reader/launch/: analog_gauge_reader.launch.py
src/analog_gauge_reader/analog_gauge_reader_msgs/: CMakeLists.txt  package.xml
src/fusiongrid_robot/: package.xml  setup.cfg  setup.py
src/fusiongrid_robot/fusiongrid_robot/: camera_consumer.py  camera_producer.py  grounding_dino_node.py  labeler_node.py  segment_labeler.py  segmentation_node.py  speech_recognition_node.py  video_publisher.py
